--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,6 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
-        <script src="../src/index.js" type="text/babel"></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </body>
 </html>
